<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="25dp"
        android:layout_height="13dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/city"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/tv_AvatarContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lion" />

    <TextView
        android:id="@+id/tvFirstNameE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="7dp"
        android:text="@string/simba"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvNicknameE" />

    <TextView
        android:id="@+id/tvLastNameE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="7dp"
        android:text="@string/motroskin"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstNameE" />

    <TextView
        android:id="@+id/tvNicknameE"
        android:layout_width="65dp"
        android:layout_height="15dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="30dp"
        android:text="@string/leo"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCountryE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="7dp"
        android:text="@string/kenya"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvLastNameE" />

    <TextView
        android:id="@+id/tvCityE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="7dp"
        android:text="@string/nairobi"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryE" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="7dp"
        android:text="@string/firstname"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvNickname" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/lastname"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="11dp"
        android:text="@string/country"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

    <TextView
        android:id="@+id/tvNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/nickname"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHobbyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="128dp"
        android:text="@string/hobbies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="84dp"
        android:layout_height="72dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
        app:srcCompat="@drawable/guitar" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="84dp"
        android:layout_height="72dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
        app:srcCompat="@drawable/book" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="84dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
        app:srcCompat="@drawable/tennis" />

    <LinearLayout
        android:id="@+id/llSmallPics"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="220dp"
            android:layout_height="73dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/smal_pic1" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/smal_pic2" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/smal_pic3" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/smal_pic4" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/smal_pic5" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvBestFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/best_friends"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/llBestFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBestFriends"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/tvBestFriend1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tiger" />

        <TextView
            android:id="@+id/tvBestFriend2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/puma" />

        <TextView
            android:id="@+id/tvBestFriend3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cat" />

        <TextView
            android:id="@+id/tvBestFriend4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lion53" />

        <TextView
            android:id="@+id/tvBestFriend5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/kitty29" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vlMenuItems"
        android:layout_width="35dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="12dp">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/menu" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/search" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/settings" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="vlMenuItems" />

    <TextView
        android:id="@+id/tvFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="18dp"
        android:text="@string/friends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tvFriensNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="18dp"
        android:text="@string/_111"
        app:layout_constraintStart_toEndOf="@+id/tvFriends"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>